parser.out
Created by PLY version 3.2 (http://www.dabeaz.com/ply)

Unused terminals:

    TIMERMS

Grammar

Rule 0     S' -> procedures
Rule 1     procedures -> procedure procedures
Rule 2     procedures -> procedure
Rule 3     procedure -> TO PROCEDURENAME statements END
Rule 4     procedure -> TO PROCEDURENAME parameterDeclaration statements END
Rule 5     parameterDeclaration -> RECEIVER parameterDeclaration
Rule 6     parameterDeclaration -> RECEIVER
Rule 7     statements -> statement statements
Rule 8     statements -> statement
Rule 9     statement -> REPEAT expression LBRACKET statements RBRACKET
Rule 10    statement -> LOOP LBRACKET statements RBRACKET
Rule 11    statement -> FOREVER LBRACKET statements RBRACKET
Rule 12    statement -> IF expression LBRACKET statements RBRACKET
Rule 13    statement -> IFELSE expression LBRACKET statements RBRACKET LBRACKET statements RBRACKET
Rule 14    statement -> WAITUNTIL LBRACKET expression RBRACKET
Rule 15    statement -> WHEN expression LBRACKET expression RBRACKET
Rule 16    statement -> SHOW expression
Rule 17    statement -> SHOW RECEIVER
Rule 18    statement -> MAKE RECEIVER expression
Rule 19    statement -> WAIT expression
Rule 20    statement -> SEND expression
Rule 21    statement -> RECORD expression
Rule 22    statement -> ERASE expression
Rule 23    statement -> SETSVH expression
Rule 24    statement -> SVR expression
Rule 25    statement -> SVL expression
Rule 26    statement -> SETPOWER expression
Rule 27    statement -> I2C_WRITE expression
Rule 28    statement -> OUTPUT expression
Rule 29    statement -> ONFOR expression
Rule 30    statement -> BSEND expression
Rule 31    statement -> BSR expression
Rule 32    statement -> SETDP expression
Rule 33    statement -> FASTSEND expression
Rule 34    statement -> BEEP
Rule 35    statement -> STOP
Rule 36    statement -> RESET
Rule 37    statement -> RESETDP
Rule 38    statement -> ON
Rule 39    statement -> OFF
Rule 40    statement -> THISWAY
Rule 41    statement -> THATWAY
Rule 42    statement -> RD
Rule 43    statement -> BRAKE
Rule 44    statement -> LEDON
Rule 45    statement -> LEDOFF
Rule 46    statement -> I2C_START
Rule 47    statement -> I2C_STOP
Rule 48    statement -> WHENOFF
Rule 49    statement -> procedurecall
Rule 50    statement -> MOTORATTENTION
Rule 51    statement -> BYTES
Rule 52    expression -> REPORTER
Rule 53    expression -> expression AND expression
Rule 54    expression -> expression OR expression
Rule 55    expression -> expression XOR expression
Rule 56    expression -> expression LESSTHAN expression
Rule 57    expression -> expression GREATERTHAN expression
Rule 58    expression -> expression EQUALS expression
Rule 59    expression -> expression PLUS expression
Rule 60    expression -> expression MINUS expression
Rule 61    expression -> expression TIMES expression
Rule 62    expression -> expression DIVIDE expression
Rule 63    expression -> expression PERCENT expression
Rule 64    expression -> MINUS expression
Rule 65    expression -> NOT expression
Rule 66    expression -> LPAREN expression RPAREN
Rule 67    expression -> LBRACKET expression RBRACKET
Rule 68    expression -> I2C_READ expression
Rule 69    expression -> HIGHBYTE expression
Rule 70    expression -> LOWBYTE expression
Rule 71    expression -> NUMBERLITERAL
Rule 72    expression -> TIMER
Rule 73    expression -> RANDOM
Rule 74    expression -> RECALL
Rule 75    expression -> SENSOR1
Rule 76    expression -> SENSOR2
Rule 77    expression -> SENSOR3
Rule 78    expression -> SENSOR4
Rule 79    expression -> SENSOR5
Rule 80    expression -> SENSOR6
Rule 81    expression -> SENSOR7
Rule 82    expression -> SENSOR8
Rule 83    expression -> SWITCH1
Rule 84    expression -> SWITCH2
Rule 85    expression -> SWITCH3
Rule 86    expression -> SWITCH4
Rule 87    expression -> SWITCH5
Rule 88    expression -> SWITCH6
Rule 89    expression -> SWITCH7
Rule 90    expression -> SWITCH8
Rule 91    expression -> NEWIRQ
Rule 92    expression -> SERIAL
Rule 93    parm -> parm expression
Rule 94    parm -> expression
Rule 95    procedurecall -> PROCEDURENAME parm
Rule 96    procedurecall -> PROCEDURENAME

Terminals, with rules where they appear

AND                  : 53
BEEP                 : 34
BRAKE                : 43
BSEND                : 30
BSR                  : 31
BYTES                : 51
DIVIDE               : 62
END                  : 3 4
EQUALS               : 58
ERASE                : 22
FASTSEND             : 33
FOREVER              : 11
GREATERTHAN          : 57
HIGHBYTE             : 69
I2C_READ             : 68
I2C_START            : 46
I2C_STOP             : 47
I2C_WRITE            : 27
IF                   : 12
IFELSE               : 13
LBRACKET             : 9 10 11 12 13 13 14 15 67
LEDOFF               : 45
LEDON                : 44
LESSTHAN             : 56
LOOP                 : 10
LOWBYTE              : 70
LPAREN               : 66
MAKE                 : 18
MINUS                : 60 64
MOTORATTENTION       : 50
NEWIRQ               : 91
NOT                  : 65
NUMBERLITERAL        : 71
OFF                  : 39
ON                   : 38
ONFOR                : 29
OR                   : 54
OUTPUT               : 28
PERCENT              : 63
PLUS                 : 59
PROCEDURENAME        : 3 4 95 96
RANDOM               : 73
RBRACKET             : 9 10 11 12 13 13 14 15 67
RD                   : 42
RECALL               : 74
RECEIVER             : 5 6 17 18
RECORD               : 21
REPEAT               : 9
REPORTER             : 52
RESET                : 36
RESETDP              : 37
RPAREN               : 66
SEND                 : 20
SENSOR1              : 75
SENSOR2              : 76
SENSOR3              : 77
SENSOR4              : 78
SENSOR5              : 79
SENSOR6              : 80
SENSOR7              : 81
SENSOR8              : 82
SERIAL               : 92
SETDP                : 32
SETPOWER             : 26
SETSVH               : 23
SHOW                 : 16 17
STOP                 : 35
SVL                  : 25
SVR                  : 24
SWITCH1              : 83
SWITCH2              : 84
SWITCH3              : 85
SWITCH4              : 86
SWITCH5              : 87
SWITCH6              : 88
SWITCH7              : 89
SWITCH8              : 90
THATWAY              : 41
THISWAY              : 40
TIMER                : 72
TIMERMS              : 
TIMES                : 61
TO                   : 3 4
WAIT                 : 19
WAITUNTIL            : 14
WHEN                 : 15
WHENOFF              : 48
XOR                  : 55
error                : 

Nonterminals, with rules where they appear

expression           : 9 12 13 14 15 15 16 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 65 66 67 68 69 70 93 94
parameterDeclaration : 4 5
parm                 : 93 95
procedure            : 1 2
procedurecall        : 49
procedures           : 1 0
statement            : 7 8
statements           : 3 4 7 9 10 11 12 13 13

Parsing method: LALR

state 0

    (0) S' -> . procedures
    (1) procedures -> . procedure procedures
    (2) procedures -> . procedure
    (3) procedure -> . TO PROCEDURENAME statements END
    (4) procedure -> . TO PROCEDURENAME parameterDeclaration statements END

    TO              shift and go to state 1

    procedures                     shift and go to state 2
    procedure                      shift and go to state 3

state 1

    (3) procedure -> TO . PROCEDURENAME statements END
    (4) procedure -> TO . PROCEDURENAME parameterDeclaration statements END

    PROCEDURENAME   shift and go to state 4


state 2

    (0) S' -> procedures .



state 3

    (1) procedures -> procedure . procedures
    (2) procedures -> procedure .
    (1) procedures -> . procedure procedures
    (2) procedures -> . procedure
    (3) procedure -> . TO PROCEDURENAME statements END
    (4) procedure -> . TO PROCEDURENAME parameterDeclaration statements END

    $end            reduce using rule 2 (procedures -> procedure .)
    TO              shift and go to state 1

    procedures                     shift and go to state 5
    procedure                      shift and go to state 3

state 4

    (3) procedure -> TO PROCEDURENAME . statements END
    (4) procedure -> TO PROCEDURENAME . parameterDeclaration statements END
    (7) statements -> . statement statements
    (8) statements -> . statement
    (5) parameterDeclaration -> . RECEIVER parameterDeclaration
    (6) parameterDeclaration -> . RECEIVER
    (9) statement -> . REPEAT expression LBRACKET statements RBRACKET
    (10) statement -> . LOOP LBRACKET statements RBRACKET
    (11) statement -> . FOREVER LBRACKET statements RBRACKET
    (12) statement -> . IF expression LBRACKET statements RBRACKET
    (13) statement -> . IFELSE expression LBRACKET statements RBRACKET LBRACKET statements RBRACKET
    (14) statement -> . WAITUNTIL LBRACKET expression RBRACKET
    (15) statement -> . WHEN expression LBRACKET expression RBRACKET
    (16) statement -> . SHOW expression
    (17) statement -> . SHOW RECEIVER
    (18) statement -> . MAKE RECEIVER expression
    (19) statement -> . WAIT expression
    (20) statement -> . SEND expression
    (21) statement -> . RECORD expression
    (22) statement -> . ERASE expression
    (23) statement -> . SETSVH expression
    (24) statement -> . SVR expression
    (25) statement -> . SVL expression
    (26) statement -> . SETPOWER expression
    (27) statement -> . I2C_WRITE expression
    (28) statement -> . OUTPUT expression
    (29) statement -> . ONFOR expression
    (30) statement -> . BSEND expression
    (31) statement -> . BSR expression
    (32) statement -> . SETDP expression
    (33) statement -> . FASTSEND expression
    (34) statement -> . BEEP
    (35) statement -> . STOP
    (36) statement -> . RESET
    (37) statement -> . RESETDP
    (38) statement -> . ON
    (39) statement -> . OFF
    (40) statement -> . THISWAY
    (41) statement -> . THATWAY
    (42) statement -> . RD
    (43) statement -> . BRAKE
    (44) statement -> . LEDON
    (45) statement -> . LEDOFF
    (46) statement -> . I2C_START
    (47) statement -> . I2C_STOP
    (48) statement -> . WHENOFF
    (49) statement -> . procedurecall
    (50) statement -> . MOTORATTENTION
    (51) statement -> . BYTES
    (95) procedurecall -> . PROCEDURENAME parm
    (96) procedurecall -> . PROCEDURENAME

    RECEIVER        shift and go to state 49
    REPEAT          shift and go to state 31
    LOOP            shift and go to state 52
    FOREVER         shift and go to state 7
    IF              shift and go to state 27
    IFELSE          shift and go to state 24
    WAITUNTIL       shift and go to state 50
    WHEN            shift and go to state 19
    SHOW            shift and go to state 18
    MAKE            shift and go to state 44
    WAIT            shift and go to state 40
    SEND            shift and go to state 46
    RECORD          shift and go to state 22
    ERASE           shift and go to state 23
    SETSVH          shift and go to state 17
    SVR             shift and go to state 38
    SVL             shift and go to state 30
    SETPOWER        shift and go to state 10
    I2C_WRITE       shift and go to state 39
    OUTPUT          shift and go to state 51
    ONFOR           shift and go to state 36
    BSEND           shift and go to state 41
    BSR             shift and go to state 20
    SETDP           shift and go to state 26
    FASTSEND        shift and go to state 13
    BEEP            shift and go to state 47
    STOP            shift and go to state 11
    RESET           shift and go to state 6
    RESETDP         shift and go to state 32
    ON              shift and go to state 14
    OFF             shift and go to state 15
    THISWAY         shift and go to state 48
    THATWAY         shift and go to state 35
    RD              shift and go to state 21
    BRAKE           shift and go to state 37
    LEDON           shift and go to state 42
    LEDOFF          shift and go to state 9
    I2C_START       shift and go to state 45
    I2C_STOP        shift and go to state 16
    WHENOFF         shift and go to state 43
    MOTORATTENTION  shift and go to state 29
    BYTES           shift and go to state 34
    PROCEDURENAME   shift and go to state 12

    statements                     shift and go to state 8
    parameterDeclaration           shift and go to state 33
    statement                      shift and go to state 25
    procedurecall                  shift and go to state 28

state 5

    (1) procedures -> procedure procedures .

    $end            reduce using rule 1 (procedures -> procedure procedures .)


state 6

    (36) statement -> RESET .

    REPEAT          reduce using rule 36 (statement -> RESET .)
    LOOP            reduce using rule 36 (statement -> RESET .)
    FOREVER         reduce using rule 36 (statement -> RESET .)
    IF              reduce using rule 36 (statement -> RESET .)
    IFELSE          reduce using rule 36 (statement -> RESET .)
    WAITUNTIL       reduce using rule 36 (statement -> RESET .)
    WHEN            reduce using rule 36 (statement -> RESET .)
    SHOW            reduce using rule 36 (statement -> RESET .)
    MAKE            reduce using rule 36 (statement -> RESET .)
    WAIT            reduce using rule 36 (statement -> RESET .)
    SEND            reduce using rule 36 (statement -> RESET .)
    RECORD          reduce using rule 36 (statement -> RESET .)
    ERASE           reduce using rule 36 (statement -> RESET .)
    SETSVH          reduce using rule 36 (statement -> RESET .)
    SVR             reduce using rule 36 (statement -> RESET .)
    SVL             reduce using rule 36 (statement -> RESET .)
    SETPOWER        reduce using rule 36 (statement -> RESET .)
    I2C_WRITE       reduce using rule 36 (statement -> RESET .)
    OUTPUT          reduce using rule 36 (statement -> RESET .)
    ONFOR           reduce using rule 36 (statement -> RESET .)
    BSEND           reduce using rule 36 (statement -> RESET .)
    BSR             reduce using rule 36 (statement -> RESET .)
    SETDP           reduce using rule 36 (statement -> RESET .)
    FASTSEND        reduce using rule 36 (statement -> RESET .)
    BEEP            reduce using rule 36 (statement -> RESET .)
    STOP            reduce using rule 36 (statement -> RESET .)
    RESET           reduce using rule 36 (statement -> RESET .)
    RESETDP         reduce using rule 36 (statement -> RESET .)
    ON              reduce using rule 36 (statement -> RESET .)
    OFF             reduce using rule 36 (statement -> RESET .)
    THISWAY         reduce using rule 36 (statement -> RESET .)
    THATWAY         reduce using rule 36 (statement -> RESET .)
    RD              reduce using rule 36 (statement -> RESET .)
    BRAKE           reduce using rule 36 (statement -> RESET .)
    LEDON           reduce using rule 36 (statement -> RESET .)
    LEDOFF          reduce using rule 36 (statement -> RESET .)
    I2C_START       reduce using rule 36 (statement -> RESET .)
    I2C_STOP        reduce using rule 36 (statement -> RESET .)
    WHENOFF         reduce using rule 36 (statement -> RESET .)
    MOTORATTENTION  reduce using rule 36 (statement -> RESET .)
    BYTES           reduce using rule 36 (statement -> RESET .)
    PROCEDURENAME   reduce using rule 36 (statement -> RESET .)
    END             reduce using rule 36 (statement -> RESET .)
    RBRACKET        reduce using rule 36 (statement -> RESET .)


state 7

    (11) statement -> FOREVER . LBRACKET statements RBRACKET

    LBRACKET        shift and go to state 53


state 8

    (3) procedure -> TO PROCEDURENAME statements . END

    END             shift and go to state 54


state 9

    (45) statement -> LEDOFF .

    REPEAT          reduce using rule 45 (statement -> LEDOFF .)
    LOOP            reduce using rule 45 (statement -> LEDOFF .)
    FOREVER         reduce using rule 45 (statement -> LEDOFF .)
    IF              reduce using rule 45 (statement -> LEDOFF .)
    IFELSE          reduce using rule 45 (statement -> LEDOFF .)
    WAITUNTIL       reduce using rule 45 (statement -> LEDOFF .)
    WHEN            reduce using rule 45 (statement -> LEDOFF .)
    SHOW            reduce using rule 45 (statement -> LEDOFF .)
    MAKE            reduce using rule 45 (statement -> LEDOFF .)
    WAIT            reduce using rule 45 (statement -> LEDOFF .)
    SEND            reduce using rule 45 (statement -> LEDOFF .)
    RECORD          reduce using rule 45 (statement -> LEDOFF .)
    ERASE           reduce using rule 45 (statement -> LEDOFF .)
    SETSVH          reduce using rule 45 (statement -> LEDOFF .)
    SVR             reduce using rule 45 (statement -> LEDOFF .)
    SVL             reduce using rule 45 (statement -> LEDOFF .)
    SETPOWER        reduce using rule 45 (statement -> LEDOFF .)
    I2C_WRITE       reduce using rule 45 (statement -> LEDOFF .)
    OUTPUT          reduce using rule 45 (statement -> LEDOFF .)
    ONFOR           reduce using rule 45 (statement -> LEDOFF .)
    BSEND           reduce using rule 45 (statement -> LEDOFF .)
    BSR             reduce using rule 45 (statement -> LEDOFF .)
    SETDP           reduce using rule 45 (statement -> LEDOFF .)
    FASTSEND        reduce using rule 45 (statement -> LEDOFF .)
    BEEP            reduce using rule 45 (statement -> LEDOFF .)
    STOP            reduce using rule 45 (statement -> LEDOFF .)
    RESET           reduce using rule 45 (statement -> LEDOFF .)
    RESETDP         reduce using rule 45 (statement -> LEDOFF .)
    ON              reduce using rule 45 (statement -> LEDOFF .)
    OFF             reduce using rule 45 (statement -> LEDOFF .)
    THISWAY         reduce using rule 45 (statement -> LEDOFF .)
    THATWAY         reduce using rule 45 (statement -> LEDOFF .)
    RD              reduce using rule 45 (statement -> LEDOFF .)
    BRAKE           reduce using rule 45 (statement -> LEDOFF .)
    LEDON           reduce using rule 45 (statement -> LEDOFF .)
    LEDOFF          reduce using rule 45 (statement -> LEDOFF .)
    I2C_START       reduce using rule 45 (statement -> LEDOFF .)
    I2C_STOP        reduce using rule 45 (statement -> LEDOFF .)
    WHENOFF         reduce using rule 45 (statement -> LEDOFF .)
    MOTORATTENTION  reduce using rule 45 (statement -> LEDOFF .)
    BYTES           reduce using rule 45 (statement -> LEDOFF .)
    PROCEDURENAME   reduce using rule 45 (statement -> LEDOFF .)
    END             reduce using rule 45 (statement -> LEDOFF .)
    RBRACKET        reduce using rule 45 (statement -> LEDOFF .)


state 10

    (26) statement -> SETPOWER . expression
    (52) expression -> . REPORTER
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . expression XOR expression
    (56) expression -> . expression LESSTHAN expression
    (57) expression -> . expression GREATERTHAN expression
    (58) expression -> . expression EQUALS expression
    (59) expression -> . expression PLUS expression
    (60) expression -> . expression MINUS expression
    (61) expression -> . expression TIMES expression
    (62) expression -> . expression DIVIDE expression
    (63) expression -> . expression PERCENT expression
    (64) expression -> . MINUS expression
    (65) expression -> . NOT expression
    (66) expression -> . LPAREN expression RPAREN
    (67) expression -> . LBRACKET expression RBRACKET
    (68) expression -> . I2C_READ expression
    (69) expression -> . HIGHBYTE expression
    (70) expression -> . LOWBYTE expression
    (71) expression -> . NUMBERLITERAL
    (72) expression -> . TIMER
    (73) expression -> . RANDOM
    (74) expression -> . RECALL
    (75) expression -> . SENSOR1
    (76) expression -> . SENSOR2
    (77) expression -> . SENSOR3
    (78) expression -> . SENSOR4
    (79) expression -> . SENSOR5
    (80) expression -> . SENSOR6
    (81) expression -> . SENSOR7
    (82) expression -> . SENSOR8
    (83) expression -> . SWITCH1
    (84) expression -> . SWITCH2
    (85) expression -> . SWITCH3
    (86) expression -> . SWITCH4
    (87) expression -> . SWITCH5
    (88) expression -> . SWITCH6
    (89) expression -> . SWITCH7
    (90) expression -> . SWITCH8
    (91) expression -> . NEWIRQ
    (92) expression -> . SERIAL

    REPORTER        shift and go to state 74
    MINUS           shift and go to state 62
    NOT             shift and go to state 84
    LPAREN          shift and go to state 77
    LBRACKET        shift and go to state 56
    I2C_READ        shift and go to state 82
    HIGHBYTE        shift and go to state 73
    LOWBYTE         shift and go to state 79
    NUMBERLITERAL   shift and go to state 80
    TIMER           shift and go to state 76
    RANDOM          shift and go to state 75
    RECALL          shift and go to state 81
    SENSOR1         shift and go to state 58
    SENSOR2         shift and go to state 60
    SENSOR3         shift and go to state 59
    SENSOR4         shift and go to state 72
    SENSOR5         shift and go to state 61
    SENSOR6         shift and go to state 64
    SENSOR7         shift and go to state 63
    SENSOR8         shift and go to state 57
    SWITCH1         shift and go to state 68
    SWITCH2         shift and go to state 67
    SWITCH3         shift and go to state 66
    SWITCH4         shift and go to state 83
    SWITCH5         shift and go to state 71
    SWITCH6         shift and go to state 70
    SWITCH7         shift and go to state 69
    SWITCH8         shift and go to state 65
    NEWIRQ          shift and go to state 55
    SERIAL          shift and go to state 78

    expression                     shift and go to state 85

state 11

    (35) statement -> STOP .

    REPEAT          reduce using rule 35 (statement -> STOP .)
    LOOP            reduce using rule 35 (statement -> STOP .)
    FOREVER         reduce using rule 35 (statement -> STOP .)
    IF              reduce using rule 35 (statement -> STOP .)
    IFELSE          reduce using rule 35 (statement -> STOP .)
    WAITUNTIL       reduce using rule 35 (statement -> STOP .)
    WHEN            reduce using rule 35 (statement -> STOP .)
    SHOW            reduce using rule 35 (statement -> STOP .)
    MAKE            reduce using rule 35 (statement -> STOP .)
    WAIT            reduce using rule 35 (statement -> STOP .)
    SEND            reduce using rule 35 (statement -> STOP .)
    RECORD          reduce using rule 35 (statement -> STOP .)
    ERASE           reduce using rule 35 (statement -> STOP .)
    SETSVH          reduce using rule 35 (statement -> STOP .)
    SVR             reduce using rule 35 (statement -> STOP .)
    SVL             reduce using rule 35 (statement -> STOP .)
    SETPOWER        reduce using rule 35 (statement -> STOP .)
    I2C_WRITE       reduce using rule 35 (statement -> STOP .)
    OUTPUT          reduce using rule 35 (statement -> STOP .)
    ONFOR           reduce using rule 35 (statement -> STOP .)
    BSEND           reduce using rule 35 (statement -> STOP .)
    BSR             reduce using rule 35 (statement -> STOP .)
    SETDP           reduce using rule 35 (statement -> STOP .)
    FASTSEND        reduce using rule 35 (statement -> STOP .)
    BEEP            reduce using rule 35 (statement -> STOP .)
    STOP            reduce using rule 35 (statement -> STOP .)
    RESET           reduce using rule 35 (statement -> STOP .)
    RESETDP         reduce using rule 35 (statement -> STOP .)
    ON              reduce using rule 35 (statement -> STOP .)
    OFF             reduce using rule 35 (statement -> STOP .)
    THISWAY         reduce using rule 35 (statement -> STOP .)
    THATWAY         reduce using rule 35 (statement -> STOP .)
    RD              reduce using rule 35 (statement -> STOP .)
    BRAKE           reduce using rule 35 (statement -> STOP .)
    LEDON           reduce using rule 35 (statement -> STOP .)
    LEDOFF          reduce using rule 35 (statement -> STOP .)
    I2C_START       reduce using rule 35 (statement -> STOP .)
    I2C_STOP        reduce using rule 35 (statement -> STOP .)
    WHENOFF         reduce using rule 35 (statement -> STOP .)
    MOTORATTENTION  reduce using rule 35 (statement -> STOP .)
    BYTES           reduce using rule 35 (statement -> STOP .)
    PROCEDURENAME   reduce using rule 35 (statement -> STOP .)
    END             reduce using rule 35 (statement -> STOP .)
    RBRACKET        reduce using rule 35 (statement -> STOP .)


state 12

    (95) procedurecall -> PROCEDURENAME . parm
    (96) procedurecall -> PROCEDURENAME .
    (93) parm -> . parm expression
    (94) parm -> . expression
    (52) expression -> . REPORTER
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . expression XOR expression
    (56) expression -> . expression LESSTHAN expression
    (57) expression -> . expression GREATERTHAN expression
    (58) expression -> . expression EQUALS expression
    (59) expression -> . expression PLUS expression
    (60) expression -> . expression MINUS expression
    (61) expression -> . expression TIMES expression
    (62) expression -> . expression DIVIDE expression
    (63) expression -> . expression PERCENT expression
    (64) expression -> . MINUS expression
    (65) expression -> . NOT expression
    (66) expression -> . LPAREN expression RPAREN
    (67) expression -> . LBRACKET expression RBRACKET
    (68) expression -> . I2C_READ expression
    (69) expression -> . HIGHBYTE expression
    (70) expression -> . LOWBYTE expression
    (71) expression -> . NUMBERLITERAL
    (72) expression -> . TIMER
    (73) expression -> . RANDOM
    (74) expression -> . RECALL
    (75) expression -> . SENSOR1
    (76) expression -> . SENSOR2
    (77) expression -> . SENSOR3
    (78) expression -> . SENSOR4
    (79) expression -> . SENSOR5
    (80) expression -> . SENSOR6
    (81) expression -> . SENSOR7
    (82) expression -> . SENSOR8
    (83) expression -> . SWITCH1
    (84) expression -> . SWITCH2
    (85) expression -> . SWITCH3
    (86) expression -> . SWITCH4
    (87) expression -> . SWITCH5
    (88) expression -> . SWITCH6
    (89) expression -> . SWITCH7
    (90) expression -> . SWITCH8
    (91) expression -> . NEWIRQ
    (92) expression -> . SERIAL

    REPEAT          reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    LOOP            reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    FOREVER         reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    IF              reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    IFELSE          reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    WAITUNTIL       reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    WHEN            reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    SHOW            reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    MAKE            reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    WAIT            reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    SEND            reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    RECORD          reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    ERASE           reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    SETSVH          reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    SVR             reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    SVL             reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    SETPOWER        reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    I2C_WRITE       reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    OUTPUT          reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    ONFOR           reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    BSEND           reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    BSR             reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    SETDP           reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    FASTSEND        reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    BEEP            reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    STOP            reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    RESET           reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    RESETDP         reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    ON              reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    OFF             reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    THISWAY         reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    THATWAY         reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    RD              reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    BRAKE           reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    LEDON           reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    LEDOFF          reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    I2C_START       reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    I2C_STOP        reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    WHENOFF         reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    MOTORATTENTION  reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    BYTES           reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    PROCEDURENAME   reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    END             reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    RBRACKET        reduce using rule 96 (procedurecall -> PROCEDURENAME .)
    REPORTER        shift and go to state 74
    MINUS           shift and go to state 62
    NOT             shift and go to state 84
    LPAREN          shift and go to state 77
    LBRACKET        shift and go to state 56
    I2C_READ        shift and go to state 82
    HIGHBYTE        shift and go to state 73
    LOWBYTE         shift and go to state 79
    NUMBERLITERAL   shift and go to state 80
    TIMER           shift and go to state 76
    RANDOM          shift and go to state 75
    RECALL          shift and go to state 81
    SENSOR1         shift and go to state 58
    SENSOR2         shift and go to state 60
    SENSOR3         shift and go to state 59
    SENSOR4         shift and go to state 72
    SENSOR5         shift and go to state 61
    SENSOR6         shift and go to state 64
    SENSOR7         shift and go to state 63
    SENSOR8         shift and go to state 57
    SWITCH1         shift and go to state 68
    SWITCH2         shift and go to state 67
    SWITCH3         shift and go to state 66
    SWITCH4         shift and go to state 83
    SWITCH5         shift and go to state 71
    SWITCH6         shift and go to state 70
    SWITCH7         shift and go to state 69
    SWITCH8         shift and go to state 65
    NEWIRQ          shift and go to state 55
    SERIAL          shift and go to state 78

    parm                           shift and go to state 86
    expression                     shift and go to state 87

state 13

    (33) statement -> FASTSEND . expression
    (52) expression -> . REPORTER
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . expression XOR expression
    (56) expression -> . expression LESSTHAN expression
    (57) expression -> . expression GREATERTHAN expression
    (58) expression -> . expression EQUALS expression
    (59) expression -> . expression PLUS expression
    (60) expression -> . expression MINUS expression
    (61) expression -> . expression TIMES expression
    (62) expression -> . expression DIVIDE expression
    (63) expression -> . expression PERCENT expression
    (64) expression -> . MINUS expression
    (65) expression -> . NOT expression
    (66) expression -> . LPAREN expression RPAREN
    (67) expression -> . LBRACKET expression RBRACKET
    (68) expression -> . I2C_READ expression
    (69) expression -> . HIGHBYTE expression
    (70) expression -> . LOWBYTE expression
    (71) expression -> . NUMBERLITERAL
    (72) expression -> . TIMER
    (73) expression -> . RANDOM
    (74) expression -> . RECALL
    (75) expression -> . SENSOR1
    (76) expression -> . SENSOR2
    (77) expression -> . SENSOR3
    (78) expression -> . SENSOR4
    (79) expression -> . SENSOR5
    (80) expression -> . SENSOR6
    (81) expression -> . SENSOR7
    (82) expression -> . SENSOR8
    (83) expression -> . SWITCH1
    (84) expression -> . SWITCH2
    (85) expression -> . SWITCH3
    (86) expression -> . SWITCH4
    (87) expression -> . SWITCH5
    (88) expression -> . SWITCH6
    (89) expression -> . SWITCH7
    (90) expression -> . SWITCH8
    (91) expression -> . NEWIRQ
    (92) expression -> . SERIAL

    REPORTER        shift and go to state 74
    MINUS           shift and go to state 62
    NOT             shift and go to state 84
    LPAREN          shift and go to state 77
    LBRACKET        shift and go to state 56
    I2C_READ        shift and go to state 82
    HIGHBYTE        shift and go to state 73
    LOWBYTE         shift and go to state 79
    NUMBERLITERAL   shift and go to state 80
    TIMER           shift and go to state 76
    RANDOM          shift and go to state 75
    RECALL          shift and go to state 81
    SENSOR1         shift and go to state 58
    SENSOR2         shift and go to state 60
    SENSOR3         shift and go to state 59
    SENSOR4         shift and go to state 72
    SENSOR5         shift and go to state 61
    SENSOR6         shift and go to state 64
    SENSOR7         shift and go to state 63
    SENSOR8         shift and go to state 57
    SWITCH1         shift and go to state 68
    SWITCH2         shift and go to state 67
    SWITCH3         shift and go to state 66
    SWITCH4         shift and go to state 83
    SWITCH5         shift and go to state 71
    SWITCH6         shift and go to state 70
    SWITCH7         shift and go to state 69
    SWITCH8         shift and go to state 65
    NEWIRQ          shift and go to state 55
    SERIAL          shift and go to state 78

    expression                     shift and go to state 88

state 14

    (38) statement -> ON .

    REPEAT          reduce using rule 38 (statement -> ON .)
    LOOP            reduce using rule 38 (statement -> ON .)
    FOREVER         reduce using rule 38 (statement -> ON .)
    IF              reduce using rule 38 (statement -> ON .)
    IFELSE          reduce using rule 38 (statement -> ON .)
    WAITUNTIL       reduce using rule 38 (statement -> ON .)
    WHEN            reduce using rule 38 (statement -> ON .)
